--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -518,10 +518,10 @@
             </objects>
             <point key="canvasLocation" x="2609" y="-371"/>
         </scene>
-        <!--View Controller-->
+        <!--Task Details View Controller-->
         <scene sceneID="N9p-ur-2Lc">
             <objects>
-                <viewController id="eXi-he-5LQ" sceneMemberID="viewController">
+                <viewController id="eXi-he-5LQ" customClass="taskDetailsViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hjz-Nh-I7B"/>
                         <viewControllerLayoutGuide type="bottom" id="KOK-Ws-14R"/>
@@ -529,8 +529,40 @@
                     <view key="view" contentMode="scaleToFill" id="ZbO-yJ-d73">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lyq-aN-cHd">
+                                <rect key="frame" x="180" y="100" width="240" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="9Zd-Yg-YpJ"/>
+                                    <constraint firstAttribute="width" constant="240" id="WmF-Gq-7fZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRj-3b-upE">
+                                <rect key="frame" x="130" y="156" width="340" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="340" id="btq-gP-11f"/>
+                                    <constraint firstAttribute="height" constant="35" id="hyI-Bm-heE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="lyq-aN-cHd" firstAttribute="top" secondItem="hjz-Nh-I7B" secondAttribute="bottom" constant="36" id="Cdz-eL-ZGQ"/>
+                            <constraint firstAttribute="centerX" secondItem="vRj-3b-upE" secondAttribute="centerX" id="U5A-3E-rbf"/>
+                            <constraint firstItem="vRj-3b-upE" firstAttribute="top" secondItem="lyq-aN-cHd" secondAttribute="bottom" constant="8" id="eHL-LF-TDW"/>
+                            <constraint firstAttribute="centerX" secondItem="lyq-aN-cHd" secondAttribute="centerX" id="vmP-5j-vmx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="vRj-3b-upE" id="gsj-Dv-ybi"/>
+                        <outlet property="taskNameLabel" destination="lyq-aN-cHd" id="WKm-rY-CPB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7eq-yG-p6K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -610,16 +642,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIN-aa-AyS">
-                                <rect key="frame" x="140" y="121" width="320" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="fCt-yq-9wc"/>
-                                    <constraint firstAttribute="width" constant="320" id="uTw-F5-K5t"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FSq-yQ-7Ov">
                                 <rect key="frame" x="0.0" y="423" width="600" height="120"/>
                                 <color key="backgroundColor" red="0.21568627450980393" green="0.32549019607843138" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
@@ -647,6 +669,16 @@
                                     <segue destination="XLY-jJ-Aro" kind="show" id="iU1-Yt-Gl4"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIN-aa-AyS">
+                                <rect key="frame" x="90" y="121" width="420" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="fCt-yq-9wc"/>
+                                    <constraint firstAttribute="width" constant="420" id="uTw-F5-K5t"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -914,7 +946,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="A9u-F2-sNF"/>
+        <segue reference="Ibn-0L-JYp"/>
         <segue reference="geU-F1-ySP"/>
     </inferredMetricsTieBreakers>
 </document>
